--- a/2/index.html
+++ b/2/index.html
@@ -1,3 +1,13 @@
 NIM: 1922500033<br>
 Nama: Ranum Fatwa Aulia<br>
 Kelompok: SI5J<br>
+
+<p>Hasil atau kesimpulan dari pertemuan 2 adalah:</p>
+
+<ol>
+  <li>di dalam htdocs, harus ada folder si5j2122o, sehingga pada browser bisa diakses dengan http://localhost/si5j2122o</li>
+  <li>jika object not found (404), maka cek terlebih dahalu nama folder antara htdocs denga yang diketik di localhost</li>
+  <li>jika ada tulisan error establishing database connection, cek dahulu apakah mysql sudah running pada control panel</li>
+  <li>jika sudah running, buka wp-config.php pada folder si5j2122o, dan cek db_name. pastikan db_name ada di phpmyadmin</li>
+  <li>jika pada phpmyadmin belum ada nama database nya, maka import terlebih dahulu file sql bahan pertemuan ke 2 (hasil pertemuan ke 1)</li>
+</ol>
