--- a/2/index.html
+++ b/2/index.html
@@ -5,7 +5,7 @@ Kelompok: SI5J<br>
 <p>Hasil atau kesimpulan dari pertemuan 2 adalah:</p>
 
 <ol>
-  <li>di dalam htdocs, harus ada folder si5j2122o, sehingga pada browser bisa diakses dengan http://localhost/si5j2122o</li>
+  <li>di dalam htdocs, harus ada folder si5j2122o, sehingga pada browser bisa diakses dengan <a href="http://localhost/si5j2122o" target="_blank">http://localhost/si5j2122o</a></li>
   <li>jika object not found (404), maka cek terlebih dahalu nama folder antara htdocs denga yang diketik di localhost</li>
   <li>jika ada tulisan error establishing database connection, cek dahulu apakah mysql sudah running pada control panel</li>
   <li>jika sudah running, buka wp-config.php pada folder si5j2122o, dan cek db_name. pastikan db_name ada di phpmyadmin</li>
