--- a/2/index.html
+++ b/2/index.html
@@ -12,3 +12,6 @@ Kelompok: SI5J<br>
   <li>jika pada phpmyadmin belum ada nama database nya, maka import terlebih dahulu file sql bahan pertemuan ke 2 (hasil pertemuan ke 1)</li>
   <li></li>
 </ol>
+
+berikut tampilan halaman web setelah di restore:<br>
+<img src="pert 2.png" width="300px" height="150px" >
