--- a/2/index.html
+++ b/2/index.html
@@ -10,8 +10,15 @@ Kelompok: SI5J<br>
   <li>jika ada tulisan error establishing database connection, cek dahulu apakah mysql sudah running pada control panel</li>
   <li>jika sudah running, buka wp-config.php pada folder si5j2122o, dan cek db_name. pastikan db_name ada di phpmyadmin</li>
   <li>jika pada phpmyadmin belum ada nama database nya, maka import terlebih dahulu file sql bahan pertemuan ke 2 (hasil pertemuan ke 1)</li>
-  <li></li>
+  <li>wordpress memiliki 2 sisi, 1 tampilan backend (untuk admin/dashboard) dan 1 nya lagi tampilan front end (untuk pengunjung atau client area)</li>
+  <li>untuk backend, harus login dulu di alamat <a href="ttp://localhost/si5j2122o/wp-admin" target="_blank">http://localhost/si5j2122o/wp-admin</a></li>
 </ol>
 
 berikut tampilan halaman web setelah di restore:<br>
-<img src="pert 2.png" width="300px" height="150px" >
+<a href="pert 2.png" target="_blank"><img src="mulai.png" width="300px" height="150px"></a>
+<br>
+Berikut tampilan front end:<br>
+<a href="mulai.png" target="_blank"><img src="mulai.png" width="300px" height="150px"></a>
+<br>
+Berikut tampilan back end:<br>
+<a href="admin.png" target="_blank"><img src="admin.png" width="300px" height="150px"></a>
