--- a/2/index.html
+++ b/2/index.html
@@ -15,10 +15,10 @@ Kelompok: SI5J<br>
 </ol>
 
 berikut tampilan halaman web setelah di restore:<br>
-<a href="pert 2.png" target="_blank"><img src="mulai.png" width="300px" height="150px"></a>
+<a href="pert 2.png" target="_blank"><img src="pert 2.png" width="300px" height="150px"></a>
 <br>
 Berikut tampilan front end:<br>
-<a href="mulai.png" target="_blank"><img src="mulai.png" width="300px" height="150px"></a>
+<a href="pert 2.png" target="_blank"><img src="pert 2.png" width="300px" height="150px"></a>
 <br>
 Berikut tampilan back end:<br>
 <a href="admin.png" target="_blank"><img src="admin.png" width="300px" height="150px"></a>
