--- a/5/index.html
+++ b/5/index.html
@@ -26,3 +26,6 @@ berikut tampilan halaman web:<br>
 <a href="pertemuan 5-3.png" target="_blank"><img src="pertemuan 5-3.png" width="300px" height="150px"></a>
 <br>
 <a href="pertemuan 5-3-4.png" target="_blank"><img src="pertemuan 5-3-4.png" width="300px" height="150px"></a>
+<br>
+Berikut tampilan postingan setelah disesuaikan:<br>
+<a href="tampilan akhir.png" target="_blank"><img src="tampilan akhir.png" width="300px" height="150px"></a>
