--- a/5/index.html
+++ b/5/index.html
@@ -14,7 +14,7 @@ Kelompok: SI5J<br>
   <li>sesuiakan tampilan di postingan, seperti menambahkan logo, dsb</li>
 </ol>
 
-berikut tampilan halaman web:<br>
+berikut tampilan halaman wordpress:<br>
 <a href="pertemuan 5.png" target="_blank"><img src="pertemuan 5.png" width="300px" height="150px"></a>
 <br>
 <a href="pertemuan 5-1.png" target="_blank"><img src="pertemuan 5-1.png" width="300px" height="150px"></a>
