--- a/6/index.html
+++ b/6/index.html
@@ -27,4 +27,7 @@ berikut tampilan dengan plugin nextgen-Gallery:<br>
 <a href="pertemuan6.3-nexgent.png" target="_blank"><img src="pertemuan6.3-nexgent.png" width="300px" height="150px"></a>
 <br>
 berikut tampilan dengan plugin foogallery:<br>
-<a href="pertemuan6-foogallery" target="_blank"><img src="pertemuan6-foogallery" width="300px" height="150px"></a>
+<a href="pertemuan6-foogallery.png" target="_blank"><img src="pertemuan6-foogallery.png" width="300px" height="150px"></a>
+<br>
+berikut tampilan mengaktifkan plugin yoast seo:<br>
+<a href="pertemuan6-yoastseo.png" target="_blank"><img src="pertemuan6-yoastseo.png" width="300px" height="150px"></a>
