--- a/6/index.html
+++ b/6/index.html
@@ -29,5 +29,7 @@ berikut tampilan dengan plugin nextgen-Gallery:<br>
 berikut tampilan dengan plugin foogallery:<br>
 <a href="pertemuan6-foogallery.png" target="_blank"><img src="pertemuan6-foogallery.png" width="300px" height="150px"></a>
 <br>
+<a href="pertemuan6.1-foogallery.png" target="_blank"><img src="pertemuan6.1-foogallery.png" width="300px" height="150px"></a>
+<br>
 berikut tampilan mengaktifkan plugin yoast seo:<br>
 <a href="pertemuan6-yoastseo.png" target="_blank"><img src="pertemuan6-yoastseo.png" width="300px" height="150px"></a>
